--- a/css/style.css
+++ b/css/style.css
@@ -16,12 +16,17 @@ color button #188CE8
     --color-button: #188CE8;
 }
 
+html {
+    box-sizing: border-box;
+}
+
 body {
     font-family: 'Roboto', sans-serif;
     color: var(--text-color);
     background-color: var(--main-color);
     font-size: 14px;
     letter-spacing: 0.03em;
+    font-weight: 400;
 }
 
 h1,
@@ -99,6 +104,7 @@ ul {
     align-items: center;
     font-weight: 500;
     color: #757575;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
