--- a/css/style.css
+++ b/css/style.css
@@ -94,17 +94,26 @@ ul {
     padding: 32px 0;
 }
 
-.contacts-list-item:hover .icon-contacts,
-.contacts-list-item:focus .icon-contacts {
+.contacts-link:hover .icon-contacts,
+.contacts-link:focus .icon-contacts {
     color: var(--accent-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
+
+.contacts-link:hover,
+.contacts-link:focus {
+    color: var(--accent-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 
 .contacts-link {
     display: flex;
     align-items: center;
     font-weight: 500;
     color: #757575;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 
@@ -138,6 +147,7 @@ ul {
 .contacts-list-item:not(:last-child) {
     margin-right: 50px;
 }
+
 
 .icon-contacts {
     margin-right: 10px;
@@ -184,11 +194,37 @@ ul {
 
 .nav-link:hover,
 .nav-link:focus,
-.contacts-link:focus,
-.contacts-link:hover,
 .current {
     color: var(--accent-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.current {
+    position: relative;
+    line-height: 1;
+
+
+}
+
+.current:after {
+    display: block;
+    position: absolute;
+    left: 0;
+    /*изменить на right:0;, чтобы изменить направление подчёркивания */
+    width: 5;
+    /*задаём длинну линии до наведения курсора*/
+    height: 4px;
+    /*задаём ширину линии*/
+    background-color: var(--accent-color);
+    /*задаём цвет линии*/
+    content: "";
+    transition: width 0.3s ease-out;
+    /*задаём время анимации*/
+    bottom: -1px;
+    border-radius: 2px;
+    width: 100%;
+}
+
 
 
 /* hero */
@@ -247,6 +283,8 @@ ul {
     background-color: var(--color-button);
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
         1px 4px 6px rgba(0, 0, 0, 0.16);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .buttons-list {
@@ -262,6 +300,9 @@ ul {
     color: var(--main-color);
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
         1px 4px 6px rgba(0, 0, 0, 0.16);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .project-button {
@@ -327,6 +368,35 @@ img {
     color: var(--second-text-color);
 }
 
+.project-list-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: translatey(100%);
+    width: 100%;
+    height: 100%;
+    font-size: 18px;
+    line-height: 1.556;
+    padding: 63px 24px;
+    background-color: rgba(33, 150, 243, 0.9);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    color: var(--main-color);
+}
+
+.project-list-item:hover .project-list-overlay {
+    transform: translateY(0);
+}
+
+.project-list-img {
+    position: relative;
+    overflow: hidden;
+}
+
+.project-list-item:hover,
+.project-list-item:focus {
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.12), 0 4px 4px rgba(0, 0, 0, 0.06),
+        1px 4px 6px rgba(0, 0, 0, 0.16);
+}
 
 /* features */
 
@@ -395,8 +465,31 @@ img {
 .works-list-item:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
         1px 4px 6px rgba(0, 0, 0, 0.16);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.services-list-text {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    bottom: 0;
+    width: 100%;
+    min-height: 70px;
+    padding: 15px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.142;
+    color: var(--main-color);
+    background-color: rgba(47, 48, 58, 0.8);
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.works-item {
+    position: relative;
+    margin-right: 30px;
+}
 
 /* team */
 .team {
@@ -467,12 +560,15 @@ img {
     height: 44px;
     border-radius: 50%;
     color: #AFB1B8;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+
 }
 
 .social-link:hover,
 .social-link:focus {
     background-color: var(--accent-color);
     color: var(--main-color);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -492,12 +588,14 @@ img {
     width: 170px;
     height: 92px;
     color: #afb1b8;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customer-link:hover,
 .customer-link:focus {
     border: 1px solid var(--accent-color);
     color: var(--accent-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customer .icon-list {
@@ -537,6 +635,7 @@ img {
 .footer-contact:hover,
 .footer-contact:focus {
     color: var(--accent-color);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-physical {
@@ -564,6 +663,8 @@ img {
     width: 206px;
 }
 
+
+
 .join-link {
     display: flex;
     justify-content: center;
@@ -585,8 +686,72 @@ img {
 .join-link:hover,
 .join-link:focus {
     background-color: var(--accent-color);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-detail {
     margin-right: 70px;
+}
+
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.2);
+    opacity: 1;
+    z-index: 100;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden {
+    visibility: hidden;
+    opacity: 0;
+    pointer-events: none;
+}
+
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    min-width: 528px;
+    min-height: 581px;
+    border-radius: 4px;
+    padding: 15px;
+    background-color: var(--main-color);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 1px rgba(0, 0, 0, 0.14),
+        0 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+.button-modal {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 30px;
+    height: 30px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+    color: #000;
+    background-color: transparent;
+    cursor: pointer;
+    transition: background-color 250ms, color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button-modal:hover,
+.button-modal:focus {
+    border: 1px solid transparent;
+    color: #fff;
+    background-color: var(--accent-color);
+
+}
+
+.icon-close {
+    fill: currentColor;
 }
