--- a/css/style.css
+++ b/css/style.css
@@ -97,14 +97,14 @@ ul {
 .contacts-link:hover .icon-contacts,
 .contacts-link:focus .icon-contacts {
     color: var(--accent-color);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 
 }
 
 .contacts-link:hover,
 .contacts-link:focus {
     color: var(--accent-color);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 
@@ -113,6 +113,7 @@ ul {
     align-items: center;
     font-weight: 500;
     color: #757575;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -189,6 +190,7 @@ ul {
     line-height: 1.14;
     letter-spacing: 0.02em;
     color: var(--text-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -196,7 +198,7 @@ ul {
 .nav-link:focus,
 .current {
     color: var(--accent-color);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .current {
@@ -274,6 +276,8 @@ ul {
     letter-spacing: 0.06em;
     cursor: pointer;
     color: var(--main-color);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -281,10 +285,9 @@ ul {
 .general-button:focus,
 .general-button:hover {
     background-color: var(--color-button);
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-        1px 4px 6px rgba(0, 0, 0, 0.16);
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
+
+
 }
 
 .buttons-list {
@@ -300,9 +303,7 @@ ul {
     color: var(--main-color);
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
         1px 4px 6px rgba(0, 0, 0, 0.16);
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .project-button {
@@ -316,6 +317,9 @@ ul {
     border: none;
     border-radius: 4px;
     padding: 6px 22px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .buttons-item+.buttons-item {
@@ -368,6 +372,14 @@ img {
     color: var(--second-text-color);
 }
 
+.project-list-item {
+    display: block;
+}
+
+.project-list-item {
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .project-list-overlay {
     position: absolute;
     top: 0;
@@ -397,6 +409,8 @@ img {
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.12), 0 4px 4px rgba(0, 0, 0, 0.06),
         1px 4px 6px rgba(0, 0, 0, 0.16);
 }
+
+
 
 /* features */
 
@@ -465,7 +479,7 @@ img {
 .works-list-item:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
         1px 4px 6px rgba(0, 0, 0, 0.16);
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .services-list-text {
@@ -560,7 +574,8 @@ img {
     height: 44px;
     border-radius: 50%;
     color: #AFB1B8;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -568,7 +583,7 @@ img {
 .social-link:focus {
     background-color: var(--accent-color);
     color: var(--main-color);
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 
 }
 
@@ -595,7 +610,7 @@ img {
 .customer-link:focus {
     border: 1px solid var(--accent-color);
     color: var(--accent-color);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .customer .icon-list {
@@ -630,12 +645,13 @@ img {
     line-height: 1.71;
     color: rgba(255, 255, 255, 0.6);
     font-style: normal;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-contact:hover,
 .footer-contact:focus {
     color: var(--accent-color);
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .footer-physical {
@@ -672,6 +688,7 @@ img {
     width: 44px;
     height: 44px;
     border-radius: 50%;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer .join-link {
@@ -686,7 +703,7 @@ img {
 .join-link:hover,
 .join-link:focus {
     background-color: var(--accent-color);
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .footer-detail {
